[package]
name = "bevy_variable_property"
version = "0.1.0-pre.1"
edition = "2021"
license = "Unlicense"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]
authors = ["bilowik"]
description = "A generic way to define properties as static, random, or randomized on an interval"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy_ecs = "0.10.1"
bevy_math = "0.10.1"
bevy_reflect = "0.10.1"
bevy_utils = "0.10.1"
bevy_time = "0.10.1"
array-macro = "^2.1.5"
paste = "1.0.12"


[dev-dependencies]
bevy = "0.10.1"


