[package]
name = "bevy_variable_property"
version = "0.1.0-pre.2"
edition = "2021"
license = "Unlicense"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]
authors = ["bilowik"]
description = "A generic way to define properties as static, random, or randomized on an interval"
repository = "https://github.com/bilowik/bevy_variable_property"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy_ecs = "0.11.0"
bevy_math = "0.11.0"
bevy_reflect = "0.11.0"
bevy_utils = "0.11.0"
bevy_time = "0.11.0"
array-macro = "^2.1.5"
paste = "1.0.12"


[dev-dependencies]
bevy = "0.11.0"


